--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </ul>
         </div>
 			</div>
+      </div>
       <div class="inscription_2">
         <div class="inscription_2_1">
           <img class="img_inscription_2_1" src="assets/img/shield.jpg" alt="Swiss">
@@ -73,7 +74,6 @@
           <p class="advantages_texts">NeutronMail is incorporated in Somewhere and all our serv-<br>ers are located in Switzerland. This means all user data is<br>
 protected by strict Swiss privacy laws.</p>
         </div>
-        <div class="vert_line_1"></div>
         <div class="inscription_2_2">
           <img class="img_inscription_2_2" src="assets/img/lock.jpg" alt="Swiss">
           <h3 class="advantages_title_2">Double Encryption</h3>
@@ -81,15 +81,19 @@ protected by strict Swiss privacy laws.</p>
           <p class="advantages_texts_2">All emails are secured automatically with end-to-end<br> encryption. This means even we cannot decrypt and read<br> your emails. As a result, your encrypted emails cannot<br>
 be shared with third parties.</p>
         </div>
-        <div class="vert_line_2"></div>
         <div class="inscription_2_3">
-          <img src="assets/img/key.jpg" alt="Swiss">
-          <h3 class="advantages_title">Anonymous Email</h3>
-          <p class="advantages_under_title">Protect Your Privacy</p>
-          <p class="advantages_texts">No personal information is required to create your secure<br> email account. By default, we do not keep any IP logs which<br> can be linked to your anonymous email account. Your privacy<br> comes first.</p>
+          <img  class="img_inscription_2_3" src="assets/img/key.jpg" alt="Swiss">
+          <h3 class="advantages_title_3">Anonymous Email</h3>
+          <p class="advantages_under_title_3">Protect Your Privacy</p>
+          <p class="advantages_texts_3">No personal information is required to create your secure<br> email account. By default, we do not keep any IP logs which<br> can be linked to your anonymous email account. Your privacy<br> comes first.</p>
         </div>
       </div>
-		</div>
+      <div class="vert_line_1"></div>
+      <div class="vert_line_2"></div>
+      <div class="hor_line_1"></div>
+      <div class="inscription_3">
+
+
 
 	</main>
 	<footer>
