--- a/index.html
+++ b/index.html
@@ -88,13 +88,18 @@ be shared with third parties.</p>
           <p class="advantages_texts_3">No personal information is required to create your secure<br> email account. By default, we do not keep any IP logs which<br> can be linked to your anonymous email account. Your privacy<br> comes first.</p>
         </div>
       </div>
+
+      <div class="inscription_3">
+        <h2 class="second_inscription">Physical Security</h2>
+        <p class="second_inscription_added">NeutronMail's infrastructure resides in Europe's <span class="most_secure">most secure</span><br> datacenter, underneath 1000 meters of solid rock.</p>
+      </div>
+     <div class="container_with_line">
+       <p class="with_line_par">Learn more about our security features</p>
+     </div>
+     <div class="newspapers"><img  class="img_inscription_2_3" src="assets/img/newspapers.jpg" alt="newspapers"></div>
       <div class="vert_line_1"></div>
       <div class="vert_line_2"></div>
       <div class="hor_line_1"></div>
-      <div class="inscription_3">
-
-
-
 	</main>
 	<footer>
 	</footer>
