--- a/index.html
+++ b/index.html
@@ -100,8 +100,94 @@ be shared with third parties.</p>
       <div class="vert_line_1"></div>
       <div class="vert_line_2"></div>
       <div class="hor_line_1"></div>
+      <div class="hor_line_2"></div>
+      <div class="container_3">
+        <div class="quote">
+          <div class="dot_block">
+           <ul>
+             <li class="dot_1"></li>
+             <li class="dot_2"></li>
+             <li class="dot_3"></li>
+            </ul>
+          </div>
+          <div class="quote_text"><p>A new email service being developed by a group<br>from MIT and CERN promises to bring secure,<br>
+encrypted email to the masses and keep sensitive<br> information away from prying eyes.<br><span class="quote_author">— Boston Herald</span></p></div>
+      </div>
+      <div class="container_3_1">
+        <h3 class="container_3_1_h3">Any device, anywhere</h3>
+        <p class="container_3_1_p">The NeutronMail inbox is optimized for productivity. Each detail within our secure email service is optimized to help you better read, organize, and send email.</p>
+        <button class="container_3_1_button1" type="button" value=""></button>
+        <button class="container_3_1_button2" type="button" value=""></button>
+      </div>
+      <div class="hor_line_3_1"></div>
+      <div class="hor_line_3_2"></div>
+     </div> 
+     <div class="container_4">
+      <h3 class="container_4_1_h3">Privacy is a fundamental human right.</h3>
+      <p class="container_4_1_p">Your support helps us to protect privacy world-wide.</p>
+        <div class="container_4_button">
+        <button class="container4_button1" type="button" value=""><i class="fas fa-cloud-upload-alt"></i> <span>Upgrade to Paid Plan</span></button>
+        <button class="container4_button2" type="button" value=""><i class="fas fa-dollar-sign"></i> Donate</button>
+        </div>
+     </div>
 	</main>
 	<footer>
+    <div class="hor_line_5_1""></div>
+    <p class="footer_top_text">Those, who help us secure your privacy</p>
+    <div class="sponsor_list"><img class="img_inscription_2_1" src="assets/img/sponsors.jpg" alt="Swiss"></div>
+    <div class="contacts_and_links">
+      <div class="mail">
+        <ul>
+          <li>General: <a class="email_adress" href="mailto:contact@neutronmail.ch">contact@neutronmail.ch</a></li>
+          <li>Media: <a class="email_adress" href="mailto:media@neutronmail.ch">media@neutronmail.ch</a></li>
+          <li>Security: <a class="email_adress" href="mailto:security@neutronmail.ch">security@neutronmail.ch</a></li>
+        </ul>
+        <div class="for_supp">
+          <p class="for_supp_p">For support inquiries, please visit</p>
+          <a class="for_supp_a" href="neutronmail.com/support">neutronmail.com/support</a>
+        </div>
+      </div>
+      <div class="links">
+          <div class="links_container">
+            <div class="links_container_1">
+              <h4>Company</h4>
+              <ul>
+                <li><a href="#">Blog  •</a></li>
+                <li><a href="#">Team  •</a></li>
+                <li><a href="#">Careers  •</a></li>
+                <li><a href="#">Support  •</a></li>
+                <li><a href="#">Donate  •</a></li>
+              </ul>
+            </div>
+            <div class="links_container_2">
+              <h4>Legal</h4>
+              <ul>
+                <li><a href="#">Imprint  •</a></li>
+                <li><a href="#">Privacy Policy  •</a></li>
+                <li><a href="#">Terms & Conditions  •</a></li>
+                <li><a href="#">Transparency Report  •</a></li>
+                <li><a href="#">Report Abuse  •</a></li>
+              </ul>
+            </div>
+            <div class="links_container_3">
+              <h4>NeutronMail</h4>
+              <ul>
+                <li><a href="#">Pricing  •</a></li>
+                <li><a href="#">Security  •</a></li>
+                <li><a href="#">Shop  •</a></li>
+                <li><a href="#">Press/Media Kit  •</a></li>
+                <li><a href="#">Onion Site  •</a></li>
+              </ul>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="contacts_and_social">
+      
+    </div>
+    <div class="vert_line_3"></div>
+    <div class="vert_line_4"></div>
+    <div class="vert_line_5"></div>
 	</footer>
 </body>
 </html>
