--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ encrypted email to the masses and keep sensitive<br> information away from pryin
       </div>
       <div class="hor_line_3_1"></div>
       <div class="hor_line_3_2"></div>
-     </div> 
+     </div>
      <div class="container_4">
       <h3 class="container_4_1_h3">Privacy is a fundamental human right.</h3>
       <p class="container_4_1_p">Your support helps us to protect privacy world-wide.</p>
@@ -152,38 +152,49 @@ encrypted email to the masses and keep sensitive<br> information away from pryin
             <div class="links_container_1">
               <h4>Company</h4>
               <ul>
-                <li><a href="#">Blog  •</a></li>
-                <li><a href="#">Team  •</a></li>
-                <li><a href="#">Careers  •</a></li>
-                <li><a href="#">Support  •</a></li>
-                <li><a href="#">Donate  •</a></li>
+                <li><a href="#">Blog</a><span>•</span></li>
+                <li><a href="#">Team</a><span>•</span></li>
+                <li><a href="#">Careers</a><span>•</span></li>
+                <li><a href="#">Support</a><span>•</span></li>
+                <li><a href="#">Donate</a><span>•</span></li>
               </ul>
             </div>
             <div class="links_container_2">
               <h4>Legal</h4>
               <ul>
-                <li><a href="#">Imprint  •</a></li>
-                <li><a href="#">Privacy Policy  •</a></li>
-                <li><a href="#">Terms & Conditions  •</a></li>
-                <li><a href="#">Transparency Report  •</a></li>
-                <li><a href="#">Report Abuse  •</a></li>
+                <li><a href="#">Imprint</a><span>•</span></li>
+                <li><a href="#">Privacy Policy</a><span>•</span></li>
+                <li><a href="#">Terms & Conditions</a><span>•</span></li>
+                <li><a href="#">Transparency Report</a><span>•</span></li>
+                <li><a href="#">Report Abuse</a><span>•</span></li>
               </ul>
             </div>
             <div class="links_container_3">
               <h4>NeutronMail</h4>
               <ul>
-                <li><a href="#">Pricing  •</a></li>
-                <li><a href="#">Security  •</a></li>
-                <li><a href="#">Shop  •</a></li>
-                <li><a href="#">Press/Media Kit  •</a></li>
-                <li><a href="#">Onion Site  •</a></li>
+                <li><a href="#">Pricing</a><span>•</span></li>
+                <li><a href="#">Security</a><span>•</span></li>
+                <li><a href="#">Shop</a><span>•</span></li>
+                <li><a href="#">Press/Media Kit</a><span>•</span></li>
+                <li><a href="#">Onion Site</a><span>•</span></li>
               </ul>
             </div>
           </div>
       </div>
     </div>
     <div class="contacts_and_social">
-      
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><span>/</span></li>
+        <li><a href="#">Twitter</a></li>
+        <li><span>/</span></li>
+        <li><a href="#">Google+</a></li>
+        <li><span>/</span></li>
+        <li><a href="#">Feedback Forum</a></li>
+        <li><span>/</span></li>
+        <li><a href="#">Reddit</a></li>
+      </ul>
+      <p>© 2017 Neutron Technologies AG. All Rights Reserved.</p>
     </div>
     <div class="vert_line_3"></div>
     <div class="vert_line_4"></div>
