--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- <html lang="en"> -->
 <head>
  	 <meta charset="utf-8"/>
+   <meta name="viewport" content="width=device-width">
   	 <title>NeutronMail</title>
  	  <link rel="stylesheet" href="css/reset.css"/>
  	  <link rel="stylesheet" href="css/style.css"/>
@@ -96,7 +97,7 @@ be shared with third parties.</p>
      <div class="container_with_line">
        <p class="with_line_par">Learn more about our security features</p>
      </div>
-     <div class="newspapers"><img  class="img_inscription_2_3" src="assets/img/newspapers.jpg" alt="newspapers"></div>
+     <div class="newspapers"><img  class="img_inscription_newspapers" src="assets/img/newspapers.jpg" alt="newspapers"></div>
       <div class="vert_line_1"></div>
       <div class="vert_line_2"></div>
       <div class="hor_line_1"></div>
@@ -134,7 +135,7 @@ encrypted email to the masses and keep sensitive<br> information away from pryin
 	<footer>
     <div class="hor_line_5_1""></div>
     <p class="footer_top_text">Those, who help us secure your privacy</p>
-    <div class="sponsor_list"><img class="img_inscription_2_1" src="assets/img/sponsors.jpg" alt="Swiss"></div>
+    <div class="sponsor_list"><img class="img_inscription_2_line" src="assets/img/sponsors.jpg" alt="Swiss"></div>
     <div class="contacts_and_links">
       <div class="mail">
         <ul>
